--- a/src/components/Vision/Vision.css
+++ b/src/components/Vision/Vision.css
@@ -4,6 +4,8 @@
     margin-bottom: 0px;
     margin-top: 0px;
     padding: 30px 10px 10px 10px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 .Mission
 {
@@ -11,6 +13,8 @@
     margin-bottom: 0px;
     margin-top: 0px;
     padding: 30px 10px 10px 10px;
+    padding-left: 10%;
+    padding-right: 10%;
 }
 
 .Vision h2{
