--- a/src/components/Social/Social.css
+++ b/src/components/Social/Social.css
@@ -163,3 +163,61 @@
   {
     padding-bottom: 20px;
   }
+
+  .image1
+  {
+      width: 100%;
+      height: 300px;
+  }
+
+  /* Container needed to position the button. Adjust the width as needed */
+.container {
+    margin-top: 10px;
+    position: relative;
+    width: 100%;
+  }
+  
+  /* Make the image responsive */
+
+  
+  /* Style the button and place it in the middle of the container/image */
+  .container .btn {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    background-color: #4525ff;
+    color: white;
+    font-size: 16px;
+    padding: 12px 24px;
+    border: none;
+    cursor: pointer;
+    border-radius: 5px;
+  }
+  
+  .container .btn:hover {
+    background-color: blue;
+  }
+
+  .container1
+  {
+      background-color:  #d0f0f5;
+      height: 300px;
+      padding-top: 50px;
+      padding-left: 10%;
+      padding-right: 10%;
+  }
+
+  .item
+  {
+    padding-left: 20%;
+    padding-right: 20%;
+    padding-bottom: 20px;
+  }
+
+  @media only screen and (max-width: 1026px) {
+    .container1 {
+        display: none;
+    }
+}
