need to make mobile responsive

--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -21,3 +21,12 @@
     color: #ffd942;
     background-color: #ffd942;
 }
+.icomn
+{
+    margin-left: 50px;
+}
+
+.carousel1
+{
+    margin-bottom: 20px;
+}
